Fixed the individual page for Desktop and Mobile. Also corrected the search bar on mobile

--- a/styles/sass/_favourites.scss
+++ b/styles/sass/_favourites.scss
@@ -14,6 +14,9 @@
     padding: 2rem;
     position: relative;
     z-index: 1;
+    h2 {
+      text-align: center;
+    }
   }
   img {
     border-radius: 20px;
