--- a/styles/sass/_navbar.scss
+++ b/styles/sass/_navbar.scss
@@ -126,11 +126,11 @@ nav {
   flex: 1 1 auto;
   display: flex;
   justify-content: flex-end;
-  padding-right: 1rem;
 
   svg {
     width: 1.5rem;
     height: 1.5rem;
+    margin-right: 1rem;
   }
 }
 .user {
@@ -150,7 +150,7 @@ nav {
 .false form {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   margin-top: 5px;
   input {
     background-color: #333;
@@ -167,5 +167,8 @@ nav {
     border-radius: 10px 0 0 10px;
     padding: 0 1rem;
     height: 100%;
+    svg {
+      margin-top: 0.2rem;
+    }
   }
 }
